Added bootRun JVM args